--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
-<p>Your content goes here.</p>
+<p>Your content goes here.
+    Maddy</p>
 </body>
 </html>
