--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
-<p>Your content goes here.
+<p>hello content goes here.
     Maddy</p>
 </body>
 </html>
