--- a/public/index.html
+++ b/public/index.html
@@ -9,33 +9,37 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Welcome Ferb</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Navigation</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-link" href="#">User Information</a>
-          <a class="nav-link" href="#">Book List</a>
+          <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="user.html">About Ferb</a>
+          <a class="nav-link" href="books.html">Book List</a>
         </div>
       </div>
     </nav>
-    <h1>Welcome to Ferb's page! </h1>
+    <h1> <center>Welcome to Ferb's page! </h1>
 
-    <div class="container">
+    <div class="container" style="background-color:rgba(239, 247, 130, 0.329);">
       <div class="row">
         <div class="col">
-          Thanks for coming to meet Ferb and learn more about his life! He is excited to share his adventures with you all!
+          <br>Thanks for coming to meet Ferb and learn more about his life! He is excited to share his summer adventures with you all!
+          <br> 
+          <br> Use the Navigation bar at the top to learn about Ferb and his favorite books.
+          <br> 
+          <br> <i>Enjoy!
         </div>
         <div class="col">
-          Ferb Fletcher
-          <a href="img/Ferb_Fletcherhome.png"> <img src="img/Ferb_Fletcherhome.png"/> </a>
-        
+          <center> <b>Ferb Fletcher</b>
+            <center><a href="img/Ferb_Fletcherhome.png"> <img src="img/Ferb_Fletcherhome.png"/> </a>
+              <!-- img source https://www.google.com/url?sa=i&url=https%3A%2F%2Fphineasandferb.fandom.com%2Fwiki%2FCategory%3AFerb_Fletcher&psig=AOvVaw0-Z3FQBkisRWLaoUDIo2Nh&ust=1630772646221000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCJjKq9Sb4_ICFQAAAAAdAAAAABAP
         </div>
       </div>
       </div>
