Add sortable table and css

--- a/app/public/user.html
+++ b/app/public/user.html
@@ -25,7 +25,7 @@
         </div>
       </div>
     </nav>
-    <h1> <center>Learn about Ferb! </h1>
+    <h1 class="bright"> <center>Learn about Ferb! </h1>
 
     <div class="container" style="background-color:rgba(239, 247, 130, 0.329);">
       <div class="row">
