--- a/app/public/books.html
+++ b/app/public/books.html
@@ -25,9 +25,9 @@
         </div>
       </div>
     </nav>
-    <h1> <center>Ferb's Favorite Books </h1>
+    <h1 class="bright"> <center>Ferb's Favorite Books </h1>
 
-        <table class="table">
+        <table id="myTable" class="table">
             <thead>
               <tr>
                 <th scope="col">Title</th>
@@ -86,6 +86,13 @@
             </tbody>
           </table>
 
+    <script src="js/tablesort.min.js"></script>
+      <script>
+        new Tablesort(document.getElementById('myTable'));
+      </script>
+
+      <!-- table sort plug in source http://tristen.ca/tablesort/demo/-->
+
     <!-- source https://en.wikipedia.org/wiki/The_Twilight_Saga_(film_series)-->
 
     <h1> <center>Add a New Book</h1>
@@ -102,7 +109,7 @@
         <div class="form-group">
             <label for="exampleYear">Year Published</label>
             <input type="year" class="form-control" id="exampleYear">
-          </div>
+        </div>
           <div class="form-group">
             <label for="examplePublisher">Publisher</label>
             <input type="Publisher" class="form-control" id="examplePublisher">
@@ -133,5 +140,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
+    
   </body>
 </html>
