--- a/app/public/index.html
+++ b/app/public/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
     </nav>
-    <h1> <center>Welcome to Ferb's page! </h1>
+    <h1 class="bright"> <center>Welcome to Ferb's page! </h1>
 
     <div class="container" style="background-color:rgba(239, 247, 130, 0.329);">
       <div class="row">
@@ -39,14 +39,13 @@
         <div class="col">
           <center> <b>Ferb Fletcher</b>
             <center><a href="img/Ferb_Fletcherhome.png"> <img src="img/Ferb_Fletcherhome.png"/> </a>
-              <!-- img source https://www.google.com/url?sa=i&url=https%3A%2F%2Fphineasandferb.fandom.com%2Fwiki%2FCategory%3AFerb_Fletcher&psig=AOvVaw0-Z3FQBkisRWLaoUDIo2Nh&ust=1630772646221000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCJjKq9Sb4_ICFQAAAAAdAAAAABAP
         </div>
       </div>
-      </div>
-      <!-- got styling from https://www.w3schools.com/howto/howto_css_thumbnail.asp
+    </div>
+    <!-- img source https://www.google.com/url?sa=i&url=https%3A%2F%2Fphineasandferb.fandom.com%2Fwiki%2FCategory%3AFerb_Fletcher&psig=AOvVaw0-Z3FQBkisRWLaoUDIo2Nh&ust=1630772646221000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCJjKq9Sb4_ICFQAAAAAdAAAAABAP
+    <!-- got styling from https://www.w3schools.com/howto/howto_css_thumbnail.asp
 
-      <!-- Optional JavaScript; choose one of the two! -->
-
+    <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
