--- a/app/public/books.html
+++ b/app/public/books.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="index.html">Home</a>
-          <a class="nav-link" href="user.html">About Ferb</a>
+          <a class="nav-link" href="user.html">User Profile</a>
           <a class="nav-link active" href="books.html">Book List <span class="sr-only">(current)</span></a>
         </div>
       </div>
