--- a/app/public/user.html
+++ b/app/public/user.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <title>About Ferb</title>
+    <script src="https://unpkg.com/vue@next"></script>
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -20,51 +22,37 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="index.html">Home</a>
-          <a class="nav-link active" href="user.html">About Ferb <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="user.html">User Profile<span class="sr-only">(current)</span></a>
           <a class="nav-link" href="books.html">Book List</a>
         </div>
       </div>
     </nav>
-    <h1 class="bright"> <center>Learn about Ferb! </h1>
 
+    <h1 class="bright"> <center>User Profile </h1>
+  <div id="UserProfile">
     <div class="container" style="background-color:rgba(239, 247, 130, 0.329);">
       <div class="row">
         <div class="col">
-            <b><center>Ferb Fletcher</b>
-                <br>
-            <a href="img/ferb_headshot.webp"> <img src="img/ferb_headshot.webp" alt="Ferb Feltcher Headshot" > </a>
+          <p><h2 class="bright"> {{ result.name.first }} {{ result.name.last }}</h2></p>
+          <img v-bind:src="result.picture.large" alt="User Pic">
+          </div> 
+
+          <div class="col">
+            <p><h2><center>Home:</h2> <center>{{ result.location.state }}</p>
+            <p><h2><center>Birthday:</h2> <center>{{ prettyBirthday }}</p>
+            <p><h2><center>Age:</h2> <center>{{ result.dob.age }}</p>
+            <p><h2><center>Email Address:</h2> <center><a v-bind:href="'mailto:' + result.email">{{ result.email }}</a></p>
           </div>
-          
-        <div class="col">
-            <b><center>Country</b>
-             <br> England
-          <br> 
-          <b><center>Birthday</b>
-            <br> February 29th
-            <b><center>Age</b>
-                <br> 10
-          <br> 
-          <b><center>Email</b>
-            <br>
-          <a href="mailto:ferbfletcher@danville.com">ferbfletcher@danville.com</a>
-          <br> 
-        </div>
-      </div>
-      </div>
-     <!-- img source https://www.google.com/url?sa=i&url=https%3A%2F%2Fphineasandferb.fandom.com%2Fwiki%2FCategory%3AFerb_Fletcher&psig=AOvVaw0-Z3FQBkisRWLaoUDIo2Nh&ust=1630772646221000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCJjKq9Sb4_ICFQAAAAAdAAAAABAP
+  </div>
+
 
       <!-- got styling from https://www.w3schools.com/howto/howto_css_thumbnail.asp
 
-      <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script> 
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script src="js/index.js"></script>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
