--- a/app/public/user.html
+++ b/app/public/user.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>About Ferb</title>
+    <title>User Profile</title>
     <script src="https://unpkg.com/vue@next"></script>
 
   </head>
@@ -35,7 +35,10 @@
         <div class="col">
           <p><h2 class="bright"> {{ result.name.first }} {{ result.name.last }}</h2></p>
           <img v-bind:src="result.picture.large" alt="User Pic">
-          </div> 
+          <form v-on:submit.prevent="fetchUserData">
+            <button type="submit">Refresh</button>
+          </form>
+        </div> 
 
           <div class="col">
             <p><h2><center>Home:</h2> <center>{{ result.location.state }}</p>
@@ -53,6 +56,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="js/index.js"></script>
-
+    
   </body>
 </html>
